# DIY_VR_Controller

./: .gitignore  Builder_README.md  DIY_VR_Controller_README_recruiter.md  README.md  platformio.ini
Drivers/vr_controller/: CMakeLists.txt  README.md
Drivers/vr_controller/BuiltDrivers/vr_controller/: driver.vrdrivermanifest
Drivers/vr_controller/BuiltDrivers/vr_controller/resources/input/: action_manifest.json  bindings_knuckles.json  bindings_vive_controller.json  vr_controller_profile.json
Drivers/vr_controller/include/: controller_protocol.h  driver_log.h  hid_transport.h
Drivers/vr_controller/resources/: driver.vrresources
Drivers/vr_controller/resources/icons/: README.md
Drivers/vr_controller/resources/rendermodels/steam_controller/: steam_controller.mtl
Drivers/vr_controller/resources/settings/: default.vrsettings
Drivers/vr_controller/src/: driver_log.cpp  driver_main.cpp  hid_transport.cpp
Hardware/Altium Schematics/: VR_Controller.PrjPcb
Hardware/Altium Schematics/Libraries/Custom Libraries/: COIN_MOTOR.SchLib  JOYSTICK_MODULE.SchLib  MPU6050_MODULE.SchLib  MT3608_MODULE.SchLib  TITLE_BLOCK.SchLib  TP4056_MODULE.SchLib  USB_C_POWER.SchLib
Hardware/Altium Schematics/Libraries/External SnapEDA Libraries/: ESP32-DEVKIT-V1.IntLib
Hardware/Altium Schematics/Schematics/: Controller Schematics.SchDoc
Hardware/Docs/: VR Controller parts list.xlsx
Hardware/Simulation/Motor-less Wokwi Circuit Files/: diagram.json  wokwi-project.md
lib/HIDTransport/: HIDTransport.cpp  HIDTransport.cpp.original  HIDTransport.h
lib/I2CHelpers/: I2CHelpers.cpp  I2CHelpers.h
lib/MadgwickFilter/: MadgwickFilter.cpp  MadgwickFilter.h
src/: main.cpp  main.cpp.BleButtonVibration  main.cpp.BleIMU  main.cpp.fullTestSuite  main.cpp.test  main.cpp.testBleHaptics  main.cpp.vibrationESPworking
test/: BLE_Pre-assembly_Input_Test.py  Complete_Controller_TestSuite.py  gatt_duplex_test.py  hid_ble_test.py  quaternionTest.py  quaternionsAndButtons.py  rumble.py
